syntax = "proto3";
option csharp_namespace = "OzonEdu.MerchandiseService.Grpc";
package MerchServiceGrpc;

service MerchGrpc {
  rpc RequestMerch (RequestMerchRequest) returns (RequestMerchResponse);
  
  rpc MerchRequestDone (MerchRequestDoneRequest) returns (RequestMerchResponse);

  rpc GetIssuedMerchInfo (GetMerchInfoRequest) returns (GetMerchInfoResponse);

  rpc GetIssuingMerchInfo (GetMerchInfoRequest) returns (GetMerchInfoResponse);
}

message RequestMerchRequest 
{
	string employee_email = 1;
	string size = 2;
	int32 merch_pack_title = 3;
}

message RequestMerchResponse 
{
	int64 id  = 1;
	string status  = 2;
	int64 hr_manager_id  = 3;
	string hr_manager_contact_phone  = 4;
	string employee_email  = 6;
	string size  = 7;
	int32 requested_merch_pack_id  = 8;
}

message MerchRequestDoneRequest 
{
	int64 merch_request_id = 1;
}

message GetMerchInfoRequest 
{
	int64 employee_id = 1;
}

message GetMerchInfoResponse 
{ 
	repeated  RequestMerchResponse merch_request = 1;
}
